# fre3DNA

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
fre3Dna/: __init__.py  version.py
fre3Dna/core/: attract_prep.py  util.py
fre3Dna/data/: __init__.py  base.py  graph.py  strand.py  structure.py
fre3Dna/network/: __init__.py  graph.py
fre3Dna/scripts/: fre3Dna.py
